--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
+    "autoprefixer": "^10.4.5",
     "flowbite": "^1.4.5",
     "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -22,10 +23,10 @@
     "@types/react": "17.0.38",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.13",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.5.4"
   }
 }
