--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
     "@types/node": "17.0.4",
+    "tailwindcss":"^3.0.24",
+    "postcss":"^8.4.14",
+    "autoprefixer":"^10.4.7",
     "@types/react": "17.0.38",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
