--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "next": "latest",
+    "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-top-loading-bar": "^2.1.0"
@@ -18,17 +20,17 @@
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
     "@types/node": "17.0.4",
-    "tailwindcss":"^3.0.24",
-    "postcss":"^8.4.14",
-    "autoprefixer":"^10.4.7",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "flowbite": "^1.4.5",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
 }
