--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "next": "latest",
     "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.1",
     "react-top-loading-bar": "^2.1.0"
   },
   "devDependencies": {
@@ -19,8 +23,8 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
-    "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
+    "@types/node": "^18.0.6",
+    "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
@@ -29,7 +33,6 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "styled-components": "^5.3.5",
-    "swr": "^1.3.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
