--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@stitches/react": "^1.2.8",
     "axios": "^0.27.2",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "lodash": "^4.17.21",
     "next": "latest",
     "next-themes": "^0.2.0",
