--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8",
-    "axios": "^0.27.2",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "lodash": "^4.17.21",
-    "next": "latest",
+    "next": "12.3.1",
     "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-query": "^3.39.1",
     "react-top-loading-bar": "^2.1.0"
   },
   "devDependencies": {
@@ -25,16 +23,15 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "@mui/styled-engine-sc": "^5.7.0",
+    "@next/bundle-analyzer": "^12.3.1",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "cross-env": "^7.0.3",
     "flowbite": "^1.4.5",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
-    "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
